--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,12 @@
-﻿{
+{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "OnSugarContext": "Data Source=OnSugarContext-b707610a-7c64-4df6-aa43-1a1d87e5fd27.db"
+  }
 }
-
