--- a/OnSugarAPI.csproj
+++ b/OnSugarAPI.csproj
@@ -32,10 +32,12 @@
     <None Remove="Models\" />
     <None Remove="Helpers\" />
     <None Remove="ViewModels\" />
+    <None Remove="Controllers\V1\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Helpers\" />
     <Folder Include="ViewModels\" />
+    <Folder Include="Controllers\V1\" />
   </ItemGroup>
 </Project>
